Bug 57826 - I-G-T/gem_exec_bad_domains failed
Summary: I-G-T/gem_exec_bad_domains failed
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-03 06:42 UTC by shui yangwei
Modified: 2017-10-06 14:47 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
gem_exec_bad_domains failed dmesg (91.05 KB, text/plain)
2012-12-03 06:42 UTC, shui yangwei
no flags Details

Description shui yangwei 2012-12-03 06:42:26 UTC
Created attachment 70948 [details]
gem_exec_bad_domains failed dmesg

Environment:
------------------------------
The Linux Kernel, the operating system core itself
Kernel: (drm-intel-next-queued)42dcedd4f2e715dc0313e359c8288e6397843fff
Some additional commit info:
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Nov 15 11:32:30 2012 +0000

Console print:
------------------------------
invalid gpu read domains not rejected 


Description:
------------------------------
This issue caused by I-G-T, not the kernel. 

Process:
------------------------------
1. git pull

2. git log gem_exec_bad_domains.c

3. ./gem_exec_bad_domains

Result:
------------------------------
latest commit: d8df90dc6bce77842c781aa0907147cecce4b5f6 ---> failed
 
the second commit: a7a80c2c2f7ac15ae50d75dc2fcaf59834b47e0c ---> succeed
Comment 1 Daniel Vetter 2012-12-03 08:43:42 UTC
For QA: Please switch over to the new piglit-based i-g-t infrastructure, this testcase is now split up into a bunch of subcases, and only the new subcase I've just added yesterday fails ...

For Chris: Here's the bug for your patch ;-)
Comment 2 Daniel Vetter 2012-12-04 08:00:16 UTC
Fixed in the kernel with

commit 2a2d548240ff5f5bd826640bdf8baa016ab6cec4
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Dec 3 11:49:06 2012 +0000

    drm/i915: Tighten the checks for invalid relocation domains
Comment 3 shui yangwei 2012-12-05 02:25:06 UTC
(In reply to comment #2)
> Fixed in the kernel with
> 
> commit 2a2d548240ff5f5bd826640bdf8baa016ab6cec4
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Mon Dec 3 11:49:06 2012 +0000
> 
>     drm/i915: Tighten the checks for invalid relocation domains

Yes, test the kernel of this commit, the case works correctly.

I verify this bug now.
Comment 4 Elizabeth 2017-10-06 14:47:37 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.